# ccdb

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  default.nix  flake.nix
.github/workflows/: test-flake-build.yml
m4/: autom4te.m4
src/: Makefile.am  Makefile.in
src/ccjs/: Makefile  Makefile.am  Makefile.in  ccjs
src/ccjs/lib/: Makefile.am  Makefile.in  mktmp_auto.bash
src/ccjs/libexec/: Makefile.am
src/ccjs/tests/: Makefile.am  Makefile.in  setup_suite.bash
