# ============================================================================ #
#
#
#
# ---------------------------------------------------------------------------- #

ACLOCAL_AMFLAGS = -I ../../../m4

SUBDIRS =


# ---------------------------------------------------------------------------- #

pkglib_SCRIPTS = mktmp_auto.bash


# ---------------------------------------------------------------------------- #
#
#
#
# ============================================================================ #
