# ============================================================================ #
#
#
#
# ---------------------------------------------------------------------------- #

ACLOCAL_AMFLAGS = -I ../../../m4

SUBDIRS =


# ---------------------------------------------------------------------------- #

libexec_SCRIPTS =


# ---------------------------------------------------------------------------- #
#
#
#
# ============================================================================ #
